@@ -1672,9 +1672,9 @@ namespace libtorrent
 		disconnect_all();
 		if (m_owning_storage.get())
 		{
-			m_storage->async_release_files(
-				bind(&torrent::on_files_released, shared_from_this(), _1, _2));
 			m_storage->abort_disk_io();
+			m_storage->async_release_files(
+				bind(&torrent::on_torrent_aborted, shared_from_this(), _1, _2));
 		}
 		
 		dequeue_torrent_check();
@@ -1712,6 +1712,12 @@ namespace libtorrent
 			alerts().post_alert(torrent_paused_alert(get_handle()));
 		}
 */
+	}
+
+	void torrent::on_torrent_aborted(int ret, disk_io_job const& j)
+	{
+		// the torrent should be completely shut down now, and the
+		// destructor has to be called from the main thread
 	}
 
 	void torrent::on_save_resume_data(int ret, disk_io_job const& j)
